大枠はかけてきている。次はmutex_lockをしていく

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,7 +1,7 @@
 NAME = philo_bonus
 
 SRCS = action.c ft_atoi.c handle_a_philosopher.c handle_philosophers.c handle_args_error.c\
-		info_init.c main.c output_actions.c print_error.c time.c color.c\
+		info_init.c main.c output_actions.c print_error.c time.c color.c routine.c\
 
 OBJS = $(SRCS:.c=.o)
 
