--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,15 +6,15 @@ SRCS = action.c ft_atoi.c handle_a_philosopher.c handle_philosophers.c handle_ar
 OBJS = $(SRCS:.c=.o)
 
 CC = cc
-CFLAGS = -fsanitize=address
+#CFLAGS = 
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	$(CC) $(OBJS) -o $(NAME)
 
 .c.o:
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) -c $< -o $@
 
 clean:
 	rm -rf $(OBJS)
