細かいとこ修正

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,20 +1,30 @@
 NAME = philo_bonus
 
-SRCS = action.c ft_atoi.c handle_a_philosopher.c handle_philosophers.c handle_args_error.c\
-		info_init.c main.c output_actions.c print_error.c time.c color.c routine.c\
+SRCS = srcs/action.c \
+		srcs/ft_atoi.c \
+		srcs/handle_a_philosopher.c \
+		srcs/handle_philosophers.c \
+		srcs/info_init.c \
+		srcs/main.c \
+		srcs/output_actions.c \
+		srcs/print_error.c \
+		srcs/time.c \
+		srcs/color.c \
+		srcs/routine.c\
+		srcs/is_valid_input.c\
 
 OBJS = $(SRCS:.c=.o)
 
 CC = cc
-#CFLAGS = 
+CFLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(OBJS) -o $(NAME)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 .c.o:
-	$(CC) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJS)
